Корректировка в разметке страниц

--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body class="page__body inner-page">
     <header class="page-header">
       <a class="page-header__logo" href="index.html" aria-label="Перейти на главную страницу">
-        Pink
+        <img class="page-header__image" src="https://via.placeholder.com/150x150" alt="Логотип Pink">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -41,10 +41,9 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Мобильное приложение Pink</h1>
       <section class="contest">
         <div class="contest__wrapper">
-          <h2 class="contest__title">Конкурс на самое безбашенное путешествие с Пинк</h2>
+          <h1 class="contest__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
         </div>
       </section>
     </main>
@@ -52,7 +51,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="https://via.placeholder.com/150x150" alt="">
+          <img src="https://via.placeholder.com/150x150" alt="Логотип Pink">
         </a>
         <ul class="page-footer__list footer-social">
           <li class="footer-social__item footer-social__item--twitter">
