--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo" href="#">
-        Pink
+        <img class="page-header__image" src="https://via.placeholder.com/150x150" alt="Логотип Pink">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -85,7 +85,7 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <img class="page-footer__logo" src="https://via.placeholder.com/150x150" alt="">
+        <img class="page-footer__logo" src="https://via.placeholder.com/150x150" alt="Логотип Pink">
         <ul class="page-footer__list footer-social">
           <li class="footer-social__item footer-social__item--twitter">
             <a href="#" aria-label="Перейти на сайт Twitter"></a>
