--- a/source/photo.html
+++ b/source/photo.html
@@ -7,7 +7,7 @@
   <body class="page__body inner-page">
     <header class="page-header">
       <a class="page-header__logo" href="index.html" aria-label="Перейти на главную страницу">
-        Pink
+        <img class="page-header__image" src="https://via.placeholder.com/150x150" alt="Логотип Pink">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -41,7 +41,7 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Мобильное приложение Pink</h1>
+      <h1 class="visually-hidden">Каталог фотографий пользователей Пинк</h1>
       <section class="photo-list">
         <div class="photo-list__wrapper">
           <h2 class="photo-list__title">Фотографии пользователей</h2>
@@ -49,12 +49,10 @@
             <p class="photo-list__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
           </div>
           <blockquote class="photo-list__user photo-list__user--of-the-day">
-            <div class="photo-list__desc-wrapper">
-              <div class="photo-list__desc">
-                Панорама дня
-              </div>
+            <div class="photo-list__img-wrapper">
+              <span class="photo-list__sticker-best">Панорама дня</span>
+              <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Пейзаж гор и леса с высоты птичьего полета">
             </div>
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Анна<span>(5 минут назад)</span></cite>
               <p class="quote__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -62,7 +60,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Камера направлена на белый автомобиль">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Левон<span>(5 часов назад)</span></cite>
               <p class="quote__text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
@@ -70,7 +68,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Барабанная установка">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Антон<span>(12 часов назад)</span></cite>
               <p class="quote__text">Соседи будут рады!</p>
@@ -78,7 +76,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Вид снизу на современные высотные строения">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Борис<span>(20 часов назад)</span></cite>
               <p class="quote__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -86,7 +84,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Кубанская бахча">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Сергей<span>(25 часов назад)</span></cite>
               <p class="quote__text">Самая кубанская в мире!</p>
@@ -94,7 +92,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Человек сидит на бесснежной каменной горке">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Максим<span>(40 часов назад)</span></cite>
               <p class="quote__text">Где снег-то?</p>
@@ -102,7 +100,7 @@
             </article>
           </blockquote>
           <blockquote class="photo-list__user">
-            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="">
+            <img class="photo-list__user-image" src="https://via.placeholder.com/150x150" alt="Вид на крыло самолёта и закат">
             <article class="photo-list__user-quote quote">
               <cite class="quote__title">Надежда<span>(45 часов назад)</span></cite>
               <p class="quote__text">Всем GM и взаимные лайки!</p>
@@ -116,7 +114,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="https://via.placeholder.com/150x150" alt="">
+          <img src="https://via.placeholder.com/150x150" alt="Логотип Pink">
         </a>
         <ul class="page-footer__list footer-social">
           <li class="footer-social__item footer-social__item--twitter">
