--- a/source/photo.html
+++ b/source/photo.html
@@ -109,6 +109,56 @@
           </blockquote>
         </div>
       </section>
+
+      <section class="filter">
+        <h2 class="visually-hidden">Фильтр фотографий</h2>
+        <div class="filter__wrapper">
+          <p>Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+          <article class="filter__photo">
+            <form class="filter__form" action="https://echo.htmlacademy.ru" method="post">
+              <img class="filter__image" src="https://via.placeholder.com/150x150" alt="Фото">
+              <ul class="filter__list tools-list">
+                <li class="tools-list__item tools-list__item--crop">
+                  <div class="tools-list__icon">
+                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
+                  </div>
+                  <div class="filter__range-controls range-controls">
+                    <div class="range-controls__scale">
+                      <div class="range-controls__bar"></div>
+                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
+                    </div>
+                  </div>
+                </li>
+                <li class="tools-list__item tools-list__item">
+                  <div class="tools-list__icon">
+                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
+                  </div>
+                  <div class="filter__range-controls range-controls">
+                    <div class="range-controls__scale">
+                      <div class="range-controls__bar"></div>
+                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
+                    </div>
+                  </div>
+                </li>
+                <li class="tools-list__item tools-list__item">
+                  <div class="tools-list__icon">
+                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
+                  </div>
+                  <div class="filter__range-controls range-controls">
+                    <div class="range-controls__scale">
+                      <div class="range-controls__bar"></div>
+                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+
+              <input class="filter__button filter__button--submit" type="submit" value="Запостить">
+              <input class="filter__button filter__button--reset" type="reset" value="Отмена">
+            </form>
+          </article>
+        </div>
+      </section>
     </main>
 
     <footer class="page-footer">
