--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,97 @@
           </ul>
         </div>
       </section>
+
+      <section class="reviews">
+        <h2 class="visually-hidden">Отзывы о нашем приложении</h2>
+        <div class="reviews__wrapper slider">
+        <div class="reviews__list slider__list">
+          <blockquote class="reviews__item slider__item">
+            <cite class="reviews__author-name">Николай Петров</cite>
+            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <blockquote class="reviews__item slider__item">
+            <!--У меня в макете не было текста для других сдайдов, дублировала первый-->
+            <cite class="reviews__author-name">Николай Петров</cite>
+            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <blockquote class="reviews__item slider__item">
+            <cite class="reviews__author-name">Николай Петров</cite>
+            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </blockquote>
+          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+          <button class="reviews__next" type="button">Следующий отзыв</button>
+        </div>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+
+      <section class="price">
+        <div class="price__wrapper slider slider">
+          <table class="price__list">
+            <thead class="price__list-head">
+              <tr>
+                <th class="price__value price__value--empty"></th>
+                <th class="price__value">База<p>1,99 USD</p></th>
+                <th class="price__value price__value--flag">Стандарт<p>3,99 USD</p></th>
+                <th class="price__value">Анлим<p>9,99 USD</p></th>
+              </tr>
+            </thead>
+            <tbody class="price__list-body">
+              <tr>
+                <td class="price__field price__field--empty price__field--fill">Розовый фильтр</td>
+                <td class="price__field price__field--ok">Розовый фильтр</td> <!--Здесь будут svg-->
+                <td class="price__field price__field--ok">Розовый фильтр</td>
+                <td class="price__field price__field--ok">Розовый фильтр</td>
+              </tr>
+              <tr>
+                <td class="price__field price__field--empty price__field--fill">Смайлик</td>
+                <td class="price__field price__field--cancel">Смайлик</td> <!--Здесь будут svg-->
+                <td class="price__field price__field--ok">Смайлик</td>
+                <td class="price__field price__field--ok">Смайлик</td>
+              </tr>
+              <tr>
+                <td class="price__field price__field--empty price__field--fill">Комментарии</td>
+                <td class="price__field price__field--cancel">Комментарии</td> <!--Здесь будут svg-->
+                <td class="price__field price__field--cancel">Комментарии</td>
+                <td class="price__field price__field--ok">Комментарии</td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="price__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle slider__toggle--current" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <h2 class="contacts__title">Остались вопросы? Свяжитесь с  нами!</h2>
+          <div class="contacts__call-us">
+            <h3 class="contacts__subtitle ">Звоните:</h3>
+            <a class="contacts__phone" href="tel:+78125556666" aria-label="Телефон для связи">+7 (812) 555-66-66</a>
+          </div>
+          <div class="contacts__write-us">
+            <h3 class="contacts__subtitle ">Пишите:</h3>
+            <a class="contacts__email" href="mailto:mail@htmlacademy.ru" aria-label="Почта для связи">mail@htmlacademy.ru</a>
+          </div>
+          <div class="contacts__visit-us">
+            <h3 class="contacts__subtitle ">Приезжайте в гости:</h3>
+            <address class="contacts__address" >ул. Большая Конюшенная, 19/8</address>
+          </div>
+          <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.2117689930883!2d30.320772623179398!3d59.938681683716354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1591106760995!5m2!1sru!2sru"  title="Офис компании по адресу Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></iframe>
+            <img class="page-header__image" src="https://via.placeholder.com/150x150" alt="Офис компании по адресу Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="page-footer">
