Исправила замечания по разметке

--- a/source/form.html
+++ b/source/form.html
@@ -94,7 +94,7 @@
             <div class="personal-data__contact ">
               <p class="personal-data__phone phone">
                 <label class="phone__label" for="phone">Номер телефона</label>
-                <input class="phone__input " id="phone" type="number" name="phone-form" placeholder="Номер, пожалуйста">
+                <input class="phone__input " id="phone" type="tel" name="phone-form" placeholder="Номер, пожалуйста">
               </p>
               <p class="personal-data__email email">
                 <label for="email">Адрес почты:</label>
@@ -124,7 +124,7 @@
               <label class="comment__label" for="comment">Опишите свои эмоции</label>
               <textarea class="comment__textarea" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </p>
-            <button class="personal-data__submit" type="submit">Отправить форму</button>
+            <button class="button personal-data__submit" type="submit">Отправить форму</button>
           </form>
           <p class="contest__form">
             <small>
