--- a/source/index.html
+++ b/source/index.html
@@ -85,63 +85,95 @@
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы о нашем приложении</h2>
         <div class="reviews__wrapper slider">
-        <div class="reviews__list slider__list">
-          <blockquote class="reviews__item slider__item">
-            <cite class="reviews__author-name">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-          <blockquote class="reviews__item slider__item">
-            <!--У меня в макете не было текста для других сдайдов, дублировала первый-->
-            <cite class="reviews__author-name">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-          <blockquote class="reviews__item slider__item">
-            <cite class="reviews__author-name">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-          <button class="reviews__next" type="button">Следующий отзыв</button>
-        </div>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--current" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
+              <!--У меня в макете не было текста для других сдайдов, дублировала первый-->
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
+          <div class="reviews__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button" aria-label="Первый отзыв">1</button>
+            <button class="slider__toggle" type="button" aria-label="Второй отзыв">2</button>
+            <button class="slider__toggle" type="button" aria-label="Третий отзыв">3</button>
+          </div>
         </div>
       </section>
 
       <section class="price">
+        <h2 class="visually-hidden">Тарифы приложения Pink</h2>
         <div class="price__wrapper slider slider">
-          <table class="price__list">
-            <thead class="price__list-head">
-              <tr>
-                <th class="price__value price__value--empty"></th>
-                <th class="price__value">База<p>1,99 USD</p></th>
-                <th class="price__value price__value--flag">Стандарт<p>3,99 USD</p></th>
-                <th class="price__value">Анлим<p>9,99 USD</p></th>
-              </tr>
-            </thead>
-            <tbody class="price__list-body">
-              <tr>
-                <td class="price__field price__field--empty price__field--fill">Розовый фильтр</td>
-                <td class="price__field price__field--ok">Розовый фильтр</td> <!--Здесь будут svg-->
-                <td class="price__field price__field--ok">Розовый фильтр</td>
-                <td class="price__field price__field--ok">Розовый фильтр</td>
-              </tr>
-              <tr>
-                <td class="price__field price__field--empty price__field--fill">Смайлик</td>
-                <td class="price__field price__field--cancel">Смайлик</td> <!--Здесь будут svg-->
-                <td class="price__field price__field--ok">Смайлик</td>
-                <td class="price__field price__field--ok">Смайлик</td>
-              </tr>
-              <tr>
-                <td class="price__field price__field--empty price__field--fill">Комментарии</td>
-                <td class="price__field price__field--cancel">Комментарии</td> <!--Здесь будут svg-->
-                <td class="price__field price__field--cancel">Комментарии</td>
-                <td class="price__field price__field--ok">Комментарии</td>
-              </tr>
-            </tbody>
-          </table>
+          <ul class="carousel-rates__list">
+            <li class="carousel-rates__item">
+              <header class="carousel-rates__head">
+                <span class="carousel-rates__hit-sticker"></span>
+                <h3>Стандарт</h3>
+                <p>3,99 usd</p>
+              </header>
+              <ul class="carousel-rates__list">
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Розовый фильтр</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Смайлики</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--not-included">Комментари</p>
+                   ::after // картинка
+                </li>
+              </ul>
+            </li>
+            <li class="carousel-rates__item">
+              <header class="carousel-rates__head">
+                <h3>База</h3>
+                <p>1,99 usd</p>
+              </header>
+              <ul class="carousel-rates__list">
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Розовый фильтр</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--not-included">Смайлики</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--not-included">Комментари</p>
+                   ::after // картинка
+                </li>
+              </ul>
+            </li>
+            <li class="carousel-rates__item">
+              <header class="carousel-rates__head">
+                <h3>Анлим</h3>
+                <p>9,99 usd</p>
+              </header>
+              <ul class="carousel-rates__list">
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Розовый фильтр</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Смайлики</p>
+                  ::after // картинка
+                </li>
+                <li class="carousel-rates__item">
+                  <p class="carousel-rates__rate carousel-rates__rate--included">Комментари</p>
+                   ::after // картинка
+                </li>
+              </ul>
+            </li>
+          </ul>
           <p class="price__toggles slider__toggles">
             <button class="slider__toggle" type="button">1</button>
             <button class="slider__toggle slider__toggle--current" type="button">2</button>
