--- a/source/photo.html
+++ b/source/photo.html
@@ -114,49 +114,36 @@
         <h2 class="visually-hidden">Фильтр фотографий</h2>
         <div class="filter__wrapper">
           <p>Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
-          <article class="filter__photo">
-            <form class="filter__form" action="https://echo.htmlacademy.ru" method="post">
-              <img class="filter__image" src="https://via.placeholder.com/150x150" alt="Фото">
-              <ul class="filter__list tools-list">
-                <li class="tools-list__item tools-list__item--crop">
-                  <div class="tools-list__icon">
-                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
-                  </div>
-                  <div class="filter__range-controls range-controls">
-                    <div class="range-controls__scale">
-                      <div class="range-controls__bar"></div>
-                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
-                    </div>
-                  </div>
-                </li>
-                <li class="tools-list__item tools-list__item">
-                  <div class="tools-list__icon">
-                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
-                  </div>
-                  <div class="filter__range-controls range-controls">
-                    <div class="range-controls__scale">
-                      <div class="range-controls__bar"></div>
-                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
-                    </div>
-                  </div>
-                </li>
-                <li class="tools-list__item tools-list__item">
-                  <div class="tools-list__icon">
-                    <img src="https://via.placeholder.com/150x150" alt="иконка"><!--Здесь будет svg-->
-                  </div>
-                  <div class="filter__range-controls range-controls">
-                    <div class="range-controls__scale">
-                      <div class="range-controls__bar"></div>
-                      <div class="range-controls__toggle range-controls__toggle--max" tabindex="0"></div>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+          <form class="filter__form" action="https://echo.htmlacademy.ru" method="post">
+            <input id="filter__input" class="visually-hidden" type="image" alt="Новая фотография">
+            <label class="filter__photo" for="filter__input"></label>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <button class="filter__button filter__button--crop" type="button" aria-label="Кнопка редактироваия фото: обрезка"></button>
+                <div class="filter__range">
+                  <div class="filter__range-line"></div>
+                  <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
+                </div>
+              </li>
+              <li class="filter__item">
+                <button class="filter__button filter__button--fill" type="button" aria-label="Кнопка редактироваия фото: заливка"></button>
+                <div class="filter__range">
+                  <div class="filter__range-line"></div>
+                  <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
+                </div>
+              </li>
+              <li class="filter__item">
+                <button class="filter__button filter__button--contrast" type="button" aria-label="Кнопка редактироваия фото: контраст"></button>
+                <div class="filter__range">
+                  <div class="filter__range-line"></div>
+                  <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
+                </div>
+              </li>
+            </ul>
 
-              <input class="filter__button filter__button--submit" type="submit" value="Запостить">
-              <input class="filter__button filter__button--reset" type="reset" value="Отмена">
-            </form>
-          </article>
+            <button class="button filter__button filter__button--posting" type="submit" aria-label="Кнопка добаления поста"></button>
+            <button class="button filter__button filter__button--reset" type="reset" aria-label="Кнопка сброса поста"></button>
+          </form>
         </div>
       </section>
     </main>
