Продолжаем вёрстку с препроцессором

--- a/source/form.html
+++ b/source/form.html
@@ -25,7 +25,7 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item">
-                <a class="site-list__link" href="#">
+                <a class="site-list__link" href="index.html">
                   Главная
                 </a>
               </li>
@@ -35,7 +35,7 @@
                 </a>
               </li>
               <li class="site-list__item site-list__item--active">
-                <a class="site-list__link" href="form.html">
+                <a class="site-list__link" href="#">
                   Конкурс
                 </a>
               </li>
@@ -132,7 +132,7 @@
 
             <p class="personal-data__comment comment">
               <label class="comment__label" for="comment">Опишите свои эмоции</label>
-              <textarea class="comment__textarea" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+              <textarea class="comment__textarea" cols="36" rows="10" name="comment" id="comment" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </p>
             <button class="button personal-data__submit" type="submit">Отправить форму</button>
           </form>
