--- a/source/photo.html
+++ b/source/photo.html
@@ -25,12 +25,12 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
               <li class="site-list__item">
-                <a class="site-list__link" href="#">
+                <a class="site-list__link" href="index.html">
                   Главная
                 </a>
               </li>
               <li class="site-list__item site-list__item--active">
-                <a class="site-list__link" href="photo.html">
+                <a class="site-list__link" href="#">
                   Фотографии
                 </a>
               </li>
@@ -123,35 +123,51 @@
       <section class="filter">
         <h2 class="visually-hidden">Фильтр фотографий</h2>
         <div class="filter__wrapper container">
-          <p>Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+          <p class="filter__text">Затмите их всех!<br> Выкладывайте все, что накопилось в телефоне!</p>
           <form class="filter__form" action="https://echo.htmlacademy.ru" method="post">
             <input id="filter__input" class="visually-hidden" type="image" alt="Новая фотография">
             <label class="filter__photo" for="filter__input"></label>
             <ul class="filter__list">
               <li class="filter__item">
-                <button class="filter__button filter__button--crop" type="button" aria-label="Кнопка редактироваия фото: обрезка"></button>
+                <button class="filter__button filter__button--crop" type="button" aria-label="Кнопка редактироваия фото: обрезка">
+                  <svg class="filter__button-icon filter__button-icon--current" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                    <path fill="none" d="M0,0h48v48H0V0z"/>
+                    <path d="M34,30h4V14c0-2.21-1.79-4-4-4H18v4h16V30z M14,34V2h-4v8H2v4h8v20c0,2.21,1.79,4,4,4h20v8h4v-8h8v-4H14z"/>
+                  </svg>
+                </button>
                 <div class="filter__range">
                   <div class="filter__range-line"></div>
                   <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
                 </div>
               </li>
               <li class="filter__item">
-                <button class="filter__button filter__button--fill" type="button" aria-label="Кнопка редактироваия фото: заливка"></button>
+                <button class="filter__button filter__button--fill" type="button" aria-label="Кнопка редактироваия фото: заливка">
+                  <svg class="filter__button-icon" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+                    <path fill="none" d="M0,0h48v48H0V0z"/>
+                    <path d="M33.12,17.88L15.24,0l-2.83,2.83l4.76,4.76L6.88,17.88c-1.17,1.17-1.17,3.07,0,4.24l11,11C18.46,33.71,19.23,34,20,34 s1.54-0.29,2.12-0.88l11-11C34.29,20.95,34.29,19.05,33.12,17.88z M10.41,20L20,10.42L29.59,20H10.41z M38,23c0,0-4,4.33-4,7 c0,2.21,1.79,4,4,4s4-1.79,4-4C42,27.33,38,23,38,23z"/>
+                    <rect y="40" width="48" height="3"/>
+                  </svg>
+                </button>
                 <div class="filter__range">
                   <div class="filter__range-line"></div>
                   <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
                 </div>
               </li>
               <li class="filter__item">
-                <button class="filter__button filter__button--contrast" type="button" aria-label="Кнопка редактироваия фото: контраст"></button>
+                <button class="filter__button filter__button--contrast" type="button" aria-label="Кнопка редактироваия фото: контраст">
+                  <svg class="filter__button-icon" version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="31.92px" height="31.92px" viewBox="-35.422 -7.96 31.92 31.92" enable-background="new -35.422 -7.96 31.92 31.92" xml:space="preserve">
+                    <path d="M-19.462-3.96c6.595,0,11.96,5.365,11.96,11.96s-5.365,11.96-11.96,11.96S-31.422,14.595-31.422,8 S-26.057-3.96-19.462-3.96 M-19.462-7.96c-8.814,0-15.96,7.145-15.96,15.96c0,8.813,7.146,15.96,15.96,15.96S-3.502,16.813-3.502,8 C-3.502-0.815-10.648-7.96-19.462-7.96L-19.462-7.96z"/>
+                    <path d="M-19.462,16.331c4.706,0,8.52-3.813,8.52-8.52c0-4.705-3.813-8.519-8.52-8.519"/>
+                  </svg>
+                </button>
                 <div class="filter__range">
                   <div class="filter__range-line"></div>
                   <button class="filter__range-circle-button" type="button" aria-label="Ползунок регулировки"></button>
                 </div>
               </li>
             </ul>
-            <button class="button filter__button filter__button--posting" type="submit" aria-label="Кнопка добаления поста"></button>
-            <button class="button filter__button filter__button--reset" type="reset" aria-label="Кнопка сброса поста"></button>
+            <button class="filter__button-form filter__button-form--posting" type="submit" aria-label="Кнопка добаления поста">Запостить</button>
+            <button class="filter__button-form filter__button-form--reset" type="reset" aria-label="Кнопка сброса поста">Отмена</button>
           </form>
         </div>
       </section>
