Начинаем верстать адаптивные сетки

--- a/source/photo.html
+++ b/source/photo.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Пинк</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -22,42 +23,42 @@
             </a>
             <button class="main-nav__toggle main-nav__toggle--js" type="button" aria-label="Открыть меню"></button>
           </div>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">
-                  Главная
-                </a>
-              </li>
-              <li class="site-list__item site-list__item--active">
-                <a class="site-list__link" href="#">
-                  Фотографии
-                </a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="form.html">
-                  Конкурс
-                </a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">
-                  HTML Academy
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">
+                Фотографии
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">
+                Конкурс
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">
+                HTML Academy
+              </a>
+            </li>
+          </ul>
         </nav>
+
+        <div class="page-header__title-wrapper content-wrapper">
+          <h1 class="page-header__title">Фотографии<br>пользователей</h1>
+        </div>
       </div>
     </header>
 
-    <main class="page-main">
-      <h1 class="visually-hidden">Каталог фотографий пользователей Пинк</h1>
+    <main class="page-inner">
+      <div class="page-inner__slogan-wrapper">
+        <p class="page-inner__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
+      </div>
       <section class="photo-list">
         <div class="photo-list__wrapper container">
-          <h2 class="photo-list__title">Фотографии пользователей</h2>
-          <div class="photo-list__slogan-wrapper">
-            <p class="photo-list__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-          </div>
           <blockquote class="photo-list__user photo-list__user--of-the-day">
             <div class="photo-list__img-wrapper">
               <span class="photo-list__sticker-best">Панорама дня</span>
