--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Пинк</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -20,40 +21,40 @@
                 </g>
               </svg>
             </a>
-          </div>
             <button class="main-nav__toggle main-nav__toggle--js" type="button" aria-label="Открыть меню"></button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">
-                  Главная
-                </a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="photo.html">
-                  Фотографии
-                </a>
-              </li>
-              <li class="site-list__item site-list__item--active">
-                <a class="site-list__link" href="#">
-                  Конкурс
-                </a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">
-                  HTML Academy
-                </a>
-              </li>
-            </ul>
           </div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="photo.html">
+                Фотографии
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">
+                Конкурс
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="https://htmlacademy.ru/intensive/adaptive">
+                HTML Academy
+              </a>
+            </li>
+          </ul>
         </nav>
+        <div class="page-header__title-wrapper content-wrapper">
+          <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
       </div>
     </header>
 
     <main class="page-main">
       <section class="contest">
         <div class="contest__wrapper container">
-          <h1 class="contest__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
           <p class="contest__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000  миль на вашу бонусную карту!</p>
           <form class="contest__form personal-data" action="https://echo.htmlacademy.ru" method="get">
             <div class="personal-data__item">
