--- a/source/index.html
+++ b/source/index.html
@@ -222,20 +222,22 @@
         </div>
       </section>
 
-      <section class="contacts container">
-        <h2 class="contacts__title">Остались вопросы? Свяжитесь с  нами!</h2>
-        <div class="contacts__list">
-          <div class="contacts__item contacts__item--phone">
-            <h3 class="contacts__subtitle">Звоните:</h3>
-            <a class="contacts__link" href="tel:+78125556666" aria-label="Телефон для связи">+7 (812) 555-66-66</a>
-          </div>
-          <div class="contacts__item contacts__item--email">
-            <h3 class="contacts__subtitle">Пишите:</h3>
-            <a class="contacts__link" href="mailto:mail@htmlacademy.ru" aria-label="Почта для связи">mail@htmlacademy.ru</a>
-          </div>
-          <div class="contacts__item contacts__item--address">
-            <h3 class="contacts__subtitle">Приезжайте в гости:</h3>
-            <address class="contacts__address">ул. Большая Конюшенная, 19/8</address>
+      <section class="contacts">
+        <div class="container">
+          <h2 class="contacts__title">Остались вопросы? Свяжитесь с  нами!</h2>
+          <div class="contacts__list">
+            <div class="contacts__item contacts__item--phone">
+              <h3 class="contacts__subtitle">Звоните:</h3>
+              <a class="contacts__link" href="tel:+78125556666" aria-label="Телефон для связи">+7 (812) 555-66-66</a>
+            </div>
+            <div class="contacts__item contacts__item--email">
+              <h3 class="contacts__subtitle">Пишите:</h3>
+              <a class="contacts__link" href="mailto:mail@htmlacademy.ru" aria-label="Почта для связи">mail@htmlacademy.ru</a>
+            </div>
+            <div class="contacts__item contacts__item--address">
+              <h3 class="contacts__subtitle">Приезжайте в гости:</h3>
+              <address class="contacts__address">ул. Большая Конюшенная, 19/8</address>
+            </div>
           </div>
         </div>
         <div>
