--- a/source/form.html
+++ b/source/form.html
@@ -45,7 +45,7 @@
         <nav class="page-header__main-nav main-nav">
           <div class="main-nav__wrapper-logo">
             <a class="main-nav__image" href="index.html">
-              <svg class="logo" version="1.1" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" role="img" aria-label="Логотип Pink">
+              <svg class="logo logo--form" version="1.1" width="146.3px" height="40.375px" viewBox="0 0 146.3 40.375" role="img" aria-label="Логотип Pink">
                 <g class="logo__pink">
                   <path d="M71.874,18.661c0-0.708,0.58-1.288,1.256-1.288h7.18c5.087,0,8.436,2.704,8.436,7.146v0.064 c0,4.861-4.057,7.373-8.854,7.373h-5.475v6.825c0,0.708-0.58,1.288-1.288,1.288c-0.676,0-1.256-0.58-1.256-1.288V18.661z M79.988,29.641c3.734,0,6.182-1.996,6.182-4.959v-0.063c0-3.22-2.414-4.894-6.053-4.894h-5.699v9.917H79.988L79.988,29.641z"/>
                   <path d="M93.603,18.5c0-0.708,0.579-1.288,1.255-1.288c0.709,0,1.288,0.58,1.288,1.288v20.283 c0,0.708-0.579,1.287-1.288,1.287c-0.676,0-1.255-0.579-1.255-1.287V18.5z"/>
@@ -247,7 +247,7 @@
               </g>
           </svg>
         </a>
-        <ul class="page-footer__list footer-social">
+        <ul class="page-footer__list page-footer__list--form footer-social">
           <li class="page-footer__item page-footer__item--twitter">
             <a class="page-footer__link" href="#" aria-label="Перейти на сайт Twitter">
               <svg class="page-footer__icon" width="17.5" height="14.663">
