--- a/source/photo.html
+++ b/source/photo.html
@@ -74,6 +74,13 @@
           <blockquote class="photo-list__user picture picture--of-the-day">
             <a class="picture__link picture__link--of-the-day" href="#" data-hint="Панорама дня">
               <picture>
+                <source type="image/webp" media="(min-width: 960px)"
+                srcset="img/panorama-desktop@1x.webp 1x, img/panorama-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 660px)"
+                srcset="img/panorama-tablet@1x.webp 1x, img/panorama-tablet@2x.webp 2x">
+                <source type="image/webp"
+                srcset="img/panorama-mobile@1x.webp 1x, img/panorama-mobile@2x.webp 2x">
+
                 <source media="(min-width: 960px)"
                 srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
                 <source media="(min-width: 660px)"
