Исправление по критерию б5. Корректировка index.html по БЭМ

--- a/source/index.html
+++ b/source/index.html
@@ -249,7 +249,7 @@
               </td>
             </tr>
           </table>
-          <div class="carousel-rates__slider-controls toggles">
+          <div class="price__slider-controls toggles">
             <button class="toggles__button" type="button" aria-label="Первый тариф">
             </button>
             <button class="toggles__button toggles__button--current" type="button" aria-label="Второй тариф">
